5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4381/executions/1721_3068.log
== TEST (2019-05-02 18:51:08) 
-- CODE:
n = input("nome da arma:")
D = int(input("destreza do personagem:"))
d1 = int(input("dado 1:"))
d2 = int(input("dado 2:"))
s = d1 + d2
if ((n == "CIMITARRA") and (d1 >=1) and (d1 <=10) and (d2 >=1) and (d2 <= 10) and (D >0)):
	d = 2 * s + 2 * D
	print(d)
elif((n == "KATANA") and (d1 >=1) and (d1 <=10) and (d2 >=1) and (d2 <=10) and (D >0)):
	d  = 2 * s + 2 * D
elif((n == "SABRE") and (d1 >=1) and (d1 <=10) and (d2 >=1) and (d2 <=10) and (D >0)):
   d = 2 * s + 2 * D
	print(d)
else:
	print("entrada invalida")
-- ERROR:
File "XXXX", line 13
    print(d)
           ^
TabError: inconsistent use of tabs and spaces in indentation
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:51:36) 
-- CODE:
n = input("nome da arma:")
D = int(input("destreza do personagem:"))
d1 = int(input("dado 1:"))
d2 = int(input("dado 2:"))
s = d1 + d2
if ((n == "CIMITARRA") and (d1 >=1) and (d1 <=10) and (d2 >=1) and (d2 <= 10) and (D >0)):
	d = 2 * s + 2 * D
	print(d)
elif((n == "KATANA") and (d1 >=1) and (d1 <=10) and (d2 >=1) and (d2 <=10) and (D >0)):
	d = 2 * s + 2 * D
elif((n == "SABRE") and (d1 >=1) and (d1 <=10) and (d2 >=1) and (d2 <=10) and (D >0)):
   d = 2 * s + 2 * D
	print(d)
else:
	print("entrada invalida")
-- ERROR:
File "XXXX", line 13
    print(d)
           ^
TabError: inconsistent use of tabs and spaces in indentation
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:52:16) 
-- CODE:
n = input("nome da arma:")
D = int(input("destreza do personagem:"))
d1 = int(input("dado 1:"))
d2 = int(input("dado 2:"))
s = d1 + d2
if ((n == "CIMITARRA") and (d1 >=1) and (d1 <=10) and (d2 >=1) and (d2 <= 10) and (D >0)):
	d = 2 * s + 2 * D
	print(d)
elif((n == "KATANA") and (d1 >=1) and (d1 <=10) and (d2 >=1) and (d2 <=10) and (D >0)):
	d = 2 * s + 2 * D
	print(d)
elif((n == "SABRE") and (d1 >=1) and (d1 <=10) and (d2 >=1) and (d2 <=10) and (D >0)):
   d = 2 * s + 2 * D
	print(d)
else:
	print("entrada invalida")
-- ERROR:
File "XXXX", line 14
    print(d)
           ^
TabError: inconsistent use of tabs and spaces in indentation
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:52:18) 
-- CODE:
n = input("nome da arma:")
D = int(input("destreza do personagem:"))
d1 = int(input("dado 1:"))
d2 = int(input("dado 2:"))
s = d1 + d2
if ((n == "CIMITARRA") and (d1 >=1) and (d1 <=10) and (d2 >=1) and (d2 <= 10) and (D >0)):
	d = 2 * s + 2 * D
	print(d)
elif((n == "KATANA") and (d1 >=1) and (d1 <=10) and (d2 >=1) and (d2 <=10) and (D >0)):
	d = 2 * s + 2 * D
	print(d)
elif((n == "SABRE") and (d1 >=1) and (d1 <=10) and (d2 >=1) and (d2 <=10) and (D >0)):
   d = 2 * s + 2 * D
	print(d)
else:
	print("entrada invalida")
-- ERROR:
File "XXXX", line 14
    print(d)
           ^
TabError: inconsistent use of tabs and spaces in indentation
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:52:39) 
-- CODE:
n = input("nome da arma:")
D = int(input("destreza do personagem:"))
d1 = int(input("dado 1:"))
d2 = int(input("dado 2:"))
s = d1 + d2
if ((n == "CIMITARRA") and (d1 >=1) and (d1 <=10) and (d2 >=1) and (d2 <= 10) and (D >0)):
	d = 2 * s + 2 * D
	print(d)
elif((n == "KATANA") and (d1 >=1) and (d1 <=10) and (d2 >=1) and (d2 <=10) and (D >0)):
	d = 2 * s + 2 * D
	print(d)
elif((n == "SABRE") and (d1 >=1) and (d1 <=10) and (d2 >=1) and (d2 <=10) and (D >0)):
   d = s + 2 * D
	print(d)
else:
	print("entrada invalida")
-- ERROR:
File "XXXX", line 14
    print(d)
           ^
TabError: inconsistent use of tabs and spaces in indentation
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:52:50) 
-- CODE:
n = input("nome da arma:")
D = int(input("destreza do personagem:"))
d1 = int(input("dado 1:"))
d2 = int(input("dado 2:"))
s = d1 + d2
if ((n == "CIMITARRA") and (d1 >=1) and (d1 <=10) and (d2 >=1) and (d2 <= 10) and (D >0)):
	d = 2 * s + 2 * D
	print(d)
elif((n == "KATANA") and (d1 >=1) and (d1 <=10) and (d2 >=1) and (d2 <=10) and (D >0)):
	d = 2 * s + 2 * D
	print(d)
elif((n == "SABRE") and (d1 >=1) and (d1 <=10) and (d2 >=1) and (d2 <=10) and (D >0)):
   d = s + 2 *D
	print(d)
else:
	print("entrada invalida")
-- ERROR:
File "XXXX", line 14
    print(d)
           ^
TabError: inconsistent use of tabs and spaces in indentation
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:52:51) 
-- CODE:
n = input("nome da arma:")
D = int(input("destreza do personagem:"))
d1 = int(input("dado 1:"))
d2 = int(input("dado 2:"))
s = d1 + d2
if ((n == "CIMITARRA") and (d1 >=1) and (d1 <=10) and (d2 >=1) and (d2 <= 10) and (D >0)):
	d = 2 * s + 2 * D
	print(d)
elif((n == "KATANA") and (d1 >=1) and (d1 <=10) and (d2 >=1) and (d2 <=10) and (D >0)):
	d = 2 * s + 2 * D
	print(d)
elif((n == "SABRE") and (d1 >=1) and (d1 <=10) and (d2 >=1) and (d2 <=10) and (D >0)):
   d = s + 2 *D
	print(d)
else:
	print("entrada invalida")
-- ERROR:
File "XXXX", line 14
    print(d)
           ^
TabError: inconsistent use of tabs and spaces in indentation
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:53:12) 
-- CODE:
n = input("nome da arma:")
D = int(input("destreza do personagem:"))
d1 = int(input("dado 1:"))
d2 = int(input("dado 2:"))
s = d1 + d2
if ((n == "CIMITARRA") and (d1 >=1) and (d1 <=10) and (d2 >=1) and (d2 <= 10) and (D >0)):
	d = 2 * s + 2 * D
	print(d)
elif((n == "KATANA") and (d1 >=1) and (d1 <=10) and (d2 >=1) and (d2 <=10) and (D >0)):
	d = 2 * s + D
	print(d)
elif((n == "SABRE") and (d1 >=1) and (d1 <=10) and (d2 >=1) and (d2 <=10) and (D >0)):
   d = s + 2 *D
	print(d)
else:
	print("entrada invalida")
-- ERROR:
File "XXXX", line 14
    print(d)
           ^
TabError: inconsistent use of tabs and spaces in indentation
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:53:13) 
-- CODE:
n = input("nome da arma:")
D = int(input("destreza do personagem:"))
d1 = int(input("dado 1:"))
d2 = int(input("dado 2:"))
s = d1 + d2
if ((n == "CIMITARRA") and (d1 >=1) and (d1 <=10) and (d2 >=1) and (d2 <= 10) and (D >0)):
	d = 2 * s + 2 * D
	print(d)
elif((n == "KATANA") and (d1 >=1) and (d1 <=10) and (d2 >=1) and (d2 <=10) and (D >0)):
	d = 2 * s + D
	print(d)
elif((n == "SABRE") and (d1 >=1) and (d1 <=10) and (d2 >=1) and (d2 <=10) and (D >0)):
   d = s + 2 *D
	print(d)
else:
	print("entrada invalida")
-- ERROR:
File "XXXX", line 14
    print(d)
           ^
TabError: inconsistent use of tabs and spaces in indentation
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:53:23) 
-- CODE:
n = input("nome da arma:")
D = int(input("destreza do personagem:"))
d1 = int(input("dado 1:"))
d2 = int(input("dado 2:"))
s = d1 + d2
if ((n == "CIMITARRA") and (d1 >=1) and (d1 <=10) and (d2 >=1) and (d2 <= 10) and (D >0)):
	d = 2 * s + 2 * D
	print(d)
elif((n == "KATANA") and (d1 >=1) and (d1 <=10) and (d2 >=1) and (d2 <=10) and (D >0)):
	d = 2 * s + D
	print(d)
elif((n == "SABRE") and (d1 >=1) and (d1 <=10) and (d2 >=1) and (d2 <=10) and (D >0)):
   d = s + 2*D
	print(d)
else:
	print("entrada invalida")
-- ERROR:
File "XXXX", line 14
    print(d)
           ^
TabError: inconsistent use of tabs and spaces in indentation
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:53:24) 
-- CODE:
n = input("nome da arma:")
D = int(input("destreza do personagem:"))
d1 = int(input("dado 1:"))
d2 = int(input("dado 2:"))
s = d1 + d2
if ((n == "CIMITARRA") and (d1 >=1) and (d1 <=10) and (d2 >=1) and (d2 <= 10) and (D >0)):
	d = 2 * s + 2 * D
	print(d)
elif((n == "KATANA") and (d1 >=1) and (d1 <=10) and (d2 >=1) and (d2 <=10) and (D >0)):
	d = 2 * s + D
	print(d)
elif((n == "SABRE") and (d1 >=1) and (d1 <=10) and (d2 >=1) and (d2 <=10) and (D >0)):
   d = s + 2*D
	print(d)
else:
	print("entrada invalida")
-- ERROR:
File "XXXX", line 14
    print(d)
           ^
TabError: inconsistent use of tabs and spaces in indentation
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:53:41) 
-- CODE:
n = input("nome da arma:")
D = int(input("destreza do personagem:"))
d1 = int(input("dado 1:"))
d2 = int(input("dado 2:"))
s = d1 + d2
if ((n == "CIMITARRA") and (d1 >=1) and (d1 <=10) and (d2 >=1) and (d2 <= 10) and (D >0)):
	d = 2 * s + 2 * D
	print(d)
elif((n == "KATANA") and (d1 >=1) and (d1 <=10) and (d2 >=1) and (d2 <=10) and (D >0)):
	d = 2 * s + D
	print(d)
elif((n == "SABRE") and (d1 >=1) and (d1 <=10) and (d2 >=1) and (d2 <=10) and (D >0)):
   d = s + 2*D
print(d)
else:
	print("entrada invalida")
-- ERROR:
File "XXXX", line 15
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:54:08) 
-- CODE:
n = input("nome da arma:")
D = int(input("destreza do personagem:"))
d1 = int(input("dado 1:"))
d2 = int(input("dado 2:"))
s = d1 + d2
if ((n == "CIMITARRA") and (d1 >=1) and (d1 <=10) and (d2 >=1) and (d2 <= 10) and (D >0)):
	d = 2 * s + 2 * D
	print(d)
elif((n == "KATANA") and (d1 >=1) and (d1 <=10) and (d2 >=1) and (d2 <=10) and (D >0)):
	d = 2 * s + D
	print(d)
elif((n == "SABRE") and (d1 >=1) and (d1 <=10) and (d2 >=1) and (d2 <=10) and (D >0)):
   d = s + 2*D
   print(d)
else:
	print("entrada invalida")
-- OUTPUT:
23
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 18:54:28) 
-- CODE:
n = input("nome da arma:")
D = int(input("destreza do personagem:"))
d1 = int(input("dado 1:"))
d2 = int(input("dado 2:"))
s = d1 + d2
if ((n == "CIMITARRA") and (d1 >=1) and (d1 <=10) and (d2 >=1) and (d2 <= 10) and (D >0)):
	d = 2 * s + 2 * D
	print(d)
elif((n == "KATANA") and (d1 >=1) and (d1 <=10) and (d2 >=1) and (d2 <=10) and (D >0)):
	d = 2 * s + D
	print(d)
elif((n == "SABRE") and (d1 >=1) and (d1 <=10) and (d2 >=1) and (d2 <=10) and (D >0)):
   d = s + 2*D
   print(d)
else:
	print("entrada invalida")
-- EXECUTION TIME:
0.19968
-- TEST CASE 1:
---- input:
SABRE
10
1
2
---- correct output:
23
---- user output:
23
-- TEST CASE 2:
---- input:
CIMITARRA
2
5
3
---- correct output:
20
---- user output:
20
-- TEST CASE 3:
---- input:
KATANA
10
11
10
---- correct output:
Entrada invalida
---- user output:
entrada invalida
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:54:42) 
-- CODE:
n = input("nome da arma:")
D = int(input("destreza do personagem:"))
d1 = int(input("dado 1:"))
d2 = int(input("dado 2:"))
s = d1 + d2
if ((n == "CIMITARRA") and (d1 >=1) and (d1 <=10) and (d2 >=1) and (d2 <= 10) and (D >0)):
	d = 2 * s + 2 * D
	print(d)
elif((n == "KATANA") and (d1 >=1) and (d1 <=10) and (d2 >=1) and (d2 <=10) and (D >0)):
	d = 2 * s + D
	print(d)
elif((n == "SABRE") and (d1 >=1) and (d1 <=10) and (d2 >=1) and (d2 <=10) and (D >0)):
   d = s + 2*D
   print(d)
else:
	print("entrada invalida")
-- OUTPUT:
23
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 18:54:57) 
-- CODE:
n = input("nome da arma:")
D = int(input("destreza do personagem:"))
d1 = int(input("dado 1:"))
d2 = int(input("dado 2:"))
s = d1 + d2
if ((n == "CIMITARRA") and (d1 >=1) and (d1 <=10) and (d2 >=1) and (d2 <= 10) and (D >0)):
	d = 2 * s + 2 * D
	print(d)
elif((n == "KATANA") and (d1 >=1) and (d1 <=10) and (d2 >=1) and (d2 <=10) and (D >0)):
	d = 2 * s + D
	print(d)
elif((n == "SABRE") and (d1 >=1) and (d1 <=10) and (d2 >=1) and (d2 <=10) and (D >0)):
   d = s + 2*D
   print(d)
else:
	print("entrada invalida")
-- EXECUTION TIME:
0.169522
-- TEST CASE 1:
---- input:
SABRE
10
1
2
---- correct output:
23
---- user output:
23
-- TEST CASE 2:
---- input:
CIMITARRA
2
5
3
---- correct output:
20
---- user output:
20
-- TEST CASE 3:
---- input:
KATANA
10
11
10
---- correct output:
Entrada invalida
---- user output:
entrada invalida
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
